--- a/src/main/webapp/WEB-INF/jsp/03-bootstrap/userForm.jspx
+++ b/src/main/webapp/WEB-INF/jsp/03-bootstrap/userForm.jspx
@@ -55,7 +55,10 @@ xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:form="http://www.springframework.
 				var data = {};
 				for (var i = 0; i < fields.length; i++) {
 					var $item = $(fields[i]);
-					data[$item.attr('name')] = $item.val();
+					if ( $item.attr('type') == "checkbox" )
+						data[$item.attr('name')] = $item.is(':checked');
+					else
+						data[$item.attr('name')] = $item.val();
 				}
 				return data;
 			}
